# PySTARC

./: .gitignore  LICENSE  README.md  conftest.py  install_PySTARC.sh  pyproject.toml  requirements.txt  run_pystarc.py
.github/workflows/: ci.yml
coffdrop_data/: charges.xml  connectivity.xml  mapping.xml
documents/: BD2_vs_PySTARC_comparison.tex  PySTARC_Physics_Verification.tex  PySTARC_manuscript.tex  pystarc-references.bib
examples/: PARAMETERS.md  README.md  README_PARAMETERS.md
examples/barnase_barstar/: README.md
examples/beta_cyclodextrin_guests/: README.md  run.sh
examples/carbonic_anhydrase_inhibitors/: README.md
examples/p38_SB2/: README.md  input.xml  protein.rst7  receptor.pqr  setup.py
examples/p38_mapk_sb203580/: README.md  ligand.pqr  ligand.prmtop  ligand.rst7  protein.prmtop  run.sh  rxns.xml
examples/thrombin_thrombomodulin/: README.md  bb_effect.py  input.xml  ligand.pqr  receptor.pqr  run.sh  rxns.xml
examples/trypsin_benzamidine/: README.md  run.sh  setup.py
examples/trypsin_benzamidine_multi_GPUs/: README.md  input.xml  ligand.pqr  receptor.pqr  rxns.xml  setup.py  submit_SLURM_multi_GPUs.sh  submit_SLURM_single_GPU.sh
examples/two_charged_spheres/: README.md  analytical.py  convergence.py  input.xml  ligand.pqr  receptor.pqr  run.sh  rxns.xml
pystarc/: __init__.py
pystarc/analysis/: convergence.py
pystarc/aux/: aux_tools.py
pystarc/cli/: main.py
pystarc/coffdrop_data/: charges.xml  connectivity.xml  map.xml
pystarc/forces/: engine.py  gpu_batch_engine.py  lj.py  multipole.py  (+1 more)
tests/: test_outputs.py  test_physics.py  test_pystarc.py
(+112 files in other folders)
